--- a/.env
+++ b/.env
@@ -49,4 +49,4 @@ GOOGLE_RECAPTCHA_SECRET=6Le7PfgUAAAAALCD-lFUV19iKyTxvDtD9N8TL-Br
 
 MIN_TAG_COUNT=5
 
-DEBUGBAR_ENABLED=true
+DEBUGBAR_ENABLED=false
